--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
 <link rel="stylesheet" href="css/style.css">
+
 </head>
 <body>
 	<header class="_demo--heading">
@@ -155,10 +156,10 @@
 	</article>
 </div>
 
-
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+	<script src="http://requirejs.org/docs/release/2.2.0/minified/require.js"></script>
 	<script type="text/javascript" src="js/recordButton.js"></script>
-  	<script type="text/javascript" src="js/demo.js"></script>
+  	
 
 </body>
 </html>
