--- a/public/index.html
+++ b/public/index.html
@@ -157,9 +157,9 @@
 </div>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-	<script src="http://requirejs.org/docs/release/2.2.0/minified/require.js"></script>
-	<script type="text/javascript" src="js/recordButton.js"></script>
-  	
+	<script type="text/javascript" src="js/demo.js"></script> 
+    
+
 
 </body>
 </html>
