commit do marcelo

--- a/public/index.html
+++ b/public/index.html
@@ -157,7 +157,7 @@
 </div>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-	<script type="text/javascript" src="js/demo.js"></script> 
+	<script type="text/javascript" src="js/bundle.js"></script> 
     
 
 
