--- a/public/index.html
+++ b/public/index.html
@@ -118,8 +118,7 @@
 					<div class="response-box--input-text">
 						<input type="text" placeholder="Type a response and hit enter" value="" autocomplete="off" class="chat-window--message-input base--text-input">	
 					</div>
-					
-					<li id="recordButton" class="response-box--record-button recordButton">
+					<li id="listen" class="response-box--record-button recordButton">
             			<img id="microphoneIcon" src="images/icons/microphone.svg" class="icon">
             		</li>
 				</div>
@@ -163,7 +162,8 @@
 </div>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-	<script type="text/javascript" src="js/bundle.js"></script>
-
+	<script type="text/javascript" src="js/speech-recognizer.js"></script>
+	<script type="text/javascript" src="js/speech.js"></script> 
+	<script type="text/javascript" src="js/demo.js"></script>
 </body>
 </html>
