--- a/public/index.html
+++ b/public/index.html
@@ -160,10 +160,9 @@
 	</article>
 </div>
 
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+	<script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>	
+	<script type="text/javascript" src="js/speech.js"></script>
 	<script type="text/javascript" src="js/speech-recognizer.js"></script>
-	<script type="text/javascript" src="js/socket.io.js"></script>
-	<script type="text/javascript" src="js/demo.js"></script>	
-	<script type="text/javascript" src="js/speech.js"></script> 
+	<script type="text/javascript" src="js/demo.js"></script>	 
 </body>
 </html>
