--- a/public/index.html
+++ b/public/index.html
@@ -117,7 +117,7 @@
 
 				<div class="response-box">
 					<div class="response-box--input-text">
-						<input type="text" id="resultsText" placeholder="Type a response and hit enter" value="" autocomplete="off" class="chat-window--message-input base--text-input">	
+						<input type="text" id="resultsText" placeholder="Type a response and hit enter" value="" autocomplete="off" class="chat-window--message-input base--text-input" >	
 					</div>
 					<li id="recordButton" class="response-box--record-button recordButton">
             			<img id="microphoneIcon" src="images/icons/microphone.svg" class="icon">
@@ -163,7 +163,8 @@
 </div>
 
 	<script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
-	<script type="text/javascript" src="js/demo.js"></script>
+	<script type="text/javascript" src="js/natural.js"></script>
+	<script type="text/javascript" src="js/demo.js"></script>	
 	<script type="text/javascript" src="js/index.js"></script>
 
 </body>
