--- a/public/index.html
+++ b/public/index.html
@@ -123,6 +123,10 @@
             			<img id="microphoneIcon" src="images/icons/microphone.svg" class="icon">
             		</li>
 				</div>
+
+				<audio class="audio">
+            		Your browser does not support the audio element.
+            	</audio>
 				
 			</div>
 		</div>
@@ -162,6 +166,7 @@
 	</article>
 </div>
 	<script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
+	<script type="text/javascript" src="js/text-recognizer.js"></script>
 	<script type="text/javascript" src="js/natural.js"></script>	
 	<script type="text/javascript" src="js/demo.js"></script>		
 	<script type="text/javascript" src="js/index.js"></script>
