commit com o tempo de fala

--- a/public/index.html
+++ b/public/index.html
@@ -167,8 +167,9 @@
 </div>
 	<script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
 	<script type="text/javascript" src="js/text-recognizer.js"></script>
+	<script type="text/javascript" src="js/Timer.js"></script>	
 	<script type="text/javascript" src="js/natural.js"></script>	
-	<script type="text/javascript" src="js/demo.js"></script>		
+	<script type="text/javascript" src="js/demo.js"></script>	
 	<script type="text/javascript" src="js/index.js"></script>
 
 </body>
